--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -28,7 +28,7 @@
     
     <section id="home" class="text-center py-5">
         <div class="container">
-            <img src="goblin.png" alt="Samuel" class="img-fluid rounded-circle" style="width: 150px; height: 150px; margin-bottom: 20px;">
+            <img src="images/goblin.png" alt="Samuel" class="img-fluid rounded-circle" style="width: 150px; height: 150px; margin-bottom: 20px;">
             <h1 class="display-4">Olá, eu sou Samuel</h1>
             <p class="lead">Desenvolvedor apaixonado por criar soluções eficientes em código.</p>
             <a href="#about" class="btn btn-outline-primary btn-lg mt-3">Saiba mais sobre mim</a>
@@ -50,11 +50,11 @@
             <h3 class="mt-4">Tecnologias que conheço:</h3>
             <br>
             <div class="tech-icons">
-                <img src="javascript.png" alt="JavaScript" class="tech-icon">
-                <img src="python.png" alt="Python" class="tech-icon">
-                <img src="docker.png" alt="Docker" class="tech-icon">
-                <img src="html.jpg" alt="HTML" class="tech-icon">
-                <img src="css.png" alt="CSS" class="tech-icon">
+                <img src="images/javascript.png" alt="JavaScript" class="tech-icon">
+                <img src="images/Python.png" alt="Python" class="tech-icon">
+                <img src="images/docker.png" alt="Docker" class="tech-icon">
+                <img src="images/html.jpg" alt="HTML" class="tech-icon">
+                <img src="images/css.png" alt="CSS" class="tech-icon">
             </div>
             <br><br><hr>
         </div>
@@ -119,7 +119,7 @@
     
 
     <footer class="bg-dark text-white text-center py-3">
-        <p>© 2024 Samuel - Todos os direitos reservados.</p>
+        <p>© 2024 SamuelLustosa - Todos os direitos reservados.</p>
     </footer>
 
     <!-- Adicionando JS do Bootstrap via CDN -->
