--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -30,7 +30,7 @@
         <div class="container">
             <img src="images/goblin.png" alt="Samuel" class="img-fluid rounded-circle" style="width: 150px; height: 150px; margin-bottom: 20px;">
             <h1 class="display-4">Olá, eu sou Samuel</h1>
-            <p class="lead">Desenvolvedor apaixonado por criar soluções eficientes em código.</p>
+            <p class="lead">Desenvolvedor de nada, sei de nada..</p>
             <a href="#about" class="btn btn-outline-primary btn-lg mt-3">Saiba mais sobre mim</a>
         </div>
     </section>
@@ -73,7 +73,7 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h3 class="card-title">Projeto 1</h3>
-                            <p class="card-text">Descrição breve do projeto. Tecnologias usadas: HTML, CSS, JavaScript.</p>
+                            <p class="card-text">Descrição breve do projeto e as tecnologias usadas.</p>
                             <a href="#" class="btn btn-primary">Veja no GitHub</a>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h3 class="card-title">Projeto 2</h3>
-                            <p class="card-text">Descrição breve do projeto. Tecnologias usadas: Python, Django.</p>
+                            <p class="card-text">Descrição breve do projeto e as tecnologias usadas.</p>
                             <a href="#" class="btn btn-primary">Veja no GitHub</a>
                         </div>
                     </div>
@@ -96,11 +96,11 @@
         <div class="container text-center">
             <h2>Contato</h2>
             <p>Clique no e-mail abaixo para copiá-lo:</p>
-            <p id="email-text" class="clickable-email">seuemail@example.com</p>
+            <p id="email-text" class="clickable-email">samuellustosa@gmail.com</p>
     
             <ul class="list-inline mt-3">
                 <li class="list-inline-item">
-                    <a href="https://github.com/seuusuario" target="_blank" class="btn btn-dark">
+                    <a href="https://github.com/samuellustosa" target="_blank" class="btn btn-dark">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
