--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap" rel="stylesheet"></head>
-
-
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&family=Protest+Guerrilla&display=swap" rel="stylesheet">
     <body>
         <header class="bg-dark text-white">
             <nav class="container navbar navbar-expand-lg">
@@ -49,8 +49,10 @@
         <div class="container">
             <div class="row align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 text-center">
-                    <h1 class="display-4" style="font-family: 'Oswald', sans-serif;">Olá, eu sou Samuel</h1>
-                    <p class="lead" style="font-family: sans-serif;">Desenvolvedor Front-End.</p>
+                    <h1 class="display-4" style="font-size: 60px; font-family: 'Protest Guerrilla', sans-serif;">Olá, eu sou Samuel</h1><br>
+                    <p class="lead" style="font-family: Playpen Sans;">Apaixonado por tecnologia e desenvolvimento Front-End. 
+                        Busco criar experiências digitais elegantes e funcionais, 
+                        focadas em usabilidade e design responsivo.</p>
                     <a href="#about" class="btn btn-outline-primary btn-lg mt-3">Saiba mais</a>
                     <br>
                 </div>
